[tmp] REST API > 게시글 상세 조회 작업 중
