# api/v1/Controller/BoardController.php
@@ -3,9 +3,12 @@
 namespace API\v1\Controller;
 
 use API\Service\BoardService;
+use API\Service\CommentService;
 use API\v1\Model\PageParameters;
 use API\v1\Model\Response\Board\Board;
 use API\v1\Model\Response\Board\GetWritesResponse;
+use API\v1\Model\Response\Write\Write;
+use API\v1\Model\Response\Write\Comment;
 use API\v1\Model\SearchParameters;
 use Psr\Http\Message\ResponseInterface;
 use Psr\Http\Message\ServerRequestInterface;
@@ -76,14 +79,18 @@ class BoardController
          * TODO: 공지글을 출력결과 수에 포함시킬 것인지 별도로 출력할 것인지 결정 필요
          * - 그누보드5는 공지글을 출력결과 수에 포함시킴 
          * - 아래는 별도로 출력하도록 개발됨
+         * TODO: 목록에 필요한 데이터를 반환하도록 변경이 필요함
+         * - comments => 댓글갯수, images/normal_files => 파일갯수
          */ 
         // 공지글 목록 조회
         $notice_writes = [];
         if (!$search_params->is_search) {
-            $notice_writes = $board_service->fetchNoticeWrites();
+            $fetch_notice_writes = $board_service->fetchNoticeWrites();
+            $notice_writes = array_map(fn($notice_write) => new Write($notice_write), $fetch_notice_writes);
         }
         // 게시글 목록 조회
-        $writes = $board_service->fetchWrites((array)$search_params, (array)$page_params);
+        $fetch_writes = $board_service->fetchWrites((array)$search_params, (array)$page_params);
+        $writes = array_map(fn($write) => new Write($write), $fetch_writes);
 
         $response_data = new GetWritesResponse([
             "total_records" => $total_records,
@@ -98,5 +105,36 @@ class BoardController
             "next_spt" => $board_service->getNextSearchPart((array)$search_params),
         ]);
         return api_response_json($response, (array)$response_data);
+    }
+
+    /**
+     * @OA\Get(
+     *      path="/api/v1/boards/{bo_table}/writes/{wr_id}",
+     *      summary="게시글 조회",
+     *      tags={"게시판"},
+     *      description="게시판의 게시글 1건을 조회합니다.",
+     *      @OA\PathParameter(name="bo_table", description="게시판 코드", @OA\Schema(type="string")),
+     *      @OA\PathParameter(name="wr_id", description="글 번호", @OA\Schema(type="integer")),
+     *      @OA\Response(response="200", description="게시판 글 조회 성공", @OA\JsonContent(ref="#/components/schemas/Write")),
+     *      @OA\Response(response="401", ref="#/components/responses/401"),
+     *      @OA\Response(response="403", ref="#/components/responses/403"),
+     *      @OA\Response(response="404", ref="#/components/responses/404"),
+     *      @OA\Response(response="422", ref="#/components/responses/422"),
+     *      @OA\Response(response="500", ref="#/components/responses/500"),
+     * )
+     */
+    public function getWrite(ServerRequestInterface $request, ResponseInterface $response): ResponseInterface
+    {
+        $write = $request->getAttribute('write');
+        $board = $request->getAttribute('board');
+        $comment_service = new CommentService($board);
+
+        $comments = $comment_service->getComments($write['wr_id']);
+        // $images;
+        // $thumbnail;
+
+        $write = new Write(array_merge($write, array("comments" => $comments)));
+
+        return api_response_json($response, (array)$write);
     }
 }
